# onetab_saver

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.json5  onetab_saver.py  pyproject.toml  run.bat
.claude/skills/: .gitignore
.cursor/: .gitignore
