[project]
name = "onetab-saver"
version = "0.1.0"
description = "Extract tabs from Chrome OneTab and export to Markdown"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "json5>=0.9.0",
  "playwright>=1.40.0",
]

[project.scripts]
onetab-saver = "onetab_saver:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["onetab_saver"]
